--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -10,6 +10,7 @@ concurrency:
 
 jobs:
   build-test:
+    name: Build and test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -20,6 +21,7 @@ jobs:
   # pnpm run test-unit
   # pnpm install
   deploy-test:
+    name: 🚀 Deploy
     runs-on: ubuntu-latest
     needs: build-test
     steps:
