--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie": "^0.6.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "js-cookie": "^3.0.5",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -28,6 +29,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/cookie": "^0.6.0"
+    "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6"
   }
 }
