--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test-unit": "jest"
+    "test-unit": "jest",
+    "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -19,17 +20,25 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "js-cookie": "^3.0.5",
-    "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/cookie": "^0.6.0",
-    "@types/js-cookie": "^3.0.6"
+    "@types/jest": "^29.5.12",
+    "@types/js-cookie": "^3.0.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "next": "^14.1.3",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
