--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -9,25 +9,38 @@ concurrency:
   group: main
   cancel-in-progress: true
 
+#matrix for frontend and backend packages
+
 jobs:
   build-test:
     name: Build and test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        package: [frontend, backend]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Build and test
+      - name: Install dependencies
         run: |
-          echo "Building and testing"
+          echo "Building and testing ${{ matrix.package }}"
+          cd ${{ matrix.package }} && npm install
+      # - name: Run tests
+      #   run: |
+      #     echo "Running tests for ${{ matrix.package }}"
+      #     cd ${{ matrix.package }} && npm run test-unit
   # pnpm run test-unit
   # pnpm install
   deploy-test:
     name: 🚀 Deploy
     runs-on: ubuntu-latest
     needs: build-test
+    strategy:
+      matrix:
+        package: [frontend, backend]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Deploy to test environment
         run: |
-          echo "Deploying to test environment"
+          echo "Deploying to test environment ${{ matrix.package }}"
