--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "back for my stories app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-unit": "echo \"To implement\"",
     "start": "nodemon src/app.ts"
   },
   "author": "JuanitaAK",
