--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test-unit": "jest",
+    "test-unit": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
