--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
+    "sharp": "^0.33.3",
     "tailwindcss": "3.3.3",
     "zod": "^3.22.4"
   },
