--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.2.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
