--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "openai": "^4.18.0",
     "pg": "^8.11.3",
     "ts-node": "^10.9.1",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.10.9",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
